<resources>
    <string name="Oneme_profile_invite_qr_code">Показать QR-код</string>
    <string name="Oneme_profile_invite_share_link">Поделиться ссылкой</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app_send_report">Отправить отчёт в поддержку</string>
    <string name="about_app_send_report_dialog_accept">Отправить</string>
    <string name="about_app_send_report_dialog_decline">Не отправлять</string>
    <string name="about_app_send_report_dialog_title">Отправить отчёт?</string>
    <string name="about_app_settings_toolbar_title">О приложении</string>
    <string name="about_app_settings_version">Версия приложения</string>
    <string name="action_create_multichat">Создать групповой чат</string>
    <string name="all">Все</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_host">max.ru</string>
    <string name="app_scheme">max</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attach_contact_reply">Контакт:\n%s</string>
    <string name="attach_description_union">и</string>
    <string name="attach_file">Файл</string>
    <string name="attach_gallery">Галерея</string>
    <string name="audio_onboarding_intro">Скорость звука можно изменить</string>
    <string name="audio_record_active_call_error_snackbar_title">Завершите звонок, чтобы записать голосовое сообщение</string>
    <string name="audio_record_confirm_exit_accept">Сбросить</string>
    <string name="audio_record_confirm_exit_description">Вы точно хотите прекратить запись и сбросить записанное сообщение?</string>
    <string name="audio_record_confirm_exit_title">Сбросить запись?</string>
    <string name="audio_record_error_common">Не удалось записать аудиосообщение</string>
    <string name="audio_record_error_limit">Достигнута максимальная длина записи</string>
    <string name="audio_record_hold_to_start">Удерживайте для записи</string>
    <string name="auth_blocked">Профиль заблокирован или удален</string>
    <string name="auth_error_base">Что-то пошло не так</string>
    <string name="auth_error_invalid_sms">Неверный код</string>
    <string name="auth_error_phone_blacklisted">Номер заблокирован. Обратитесь в службу поддержки</string>
    <string name="auth_error_sms_code_expired">Этот код устарел, получите новый</string>
    <string name="auth_error_sms_limit">Превышено число попыток, попробуйте позже</string>
    <string name="auth_error_wrong_login_pass">Неправильный логин или пароль</string>
    <string name="auth_error_wrong_phone">Не нашли этот номер, проверьте цифры</string>
    <string name="banner_big_permit_phone_book_contacts_action_button_text">Подключить контакты</string>
    <string name="banner_big_permit_phone_book_contacts_subtitle">Чтобы найти знакомых и начать общаться</string>
    <string name="banner_big_permit_phone_book_contacts_title">Подключите контакты</string>
    <string name="banner_compact_permit_mic_subtitle">Чтобы общаться голосом\nи принимать звонки</string>
    <string name="banner_compact_permit_mic_title">Включите микрофон</string>
    <string name="banner_compact_permit_notifications_title">Включите уведомления</string>
    <string name="banner_compact_permit_phone_book_contacts_subtitle">Чтобы найти здесь знакомых</string>
    <string name="banner_compact_permit_phone_book_contacts_title">Подключите контакты</string>
    <string name="banner_middle_permit_notifications_title">Включите\nуведомления</string>
    <string name="banner_middle_permit_phone_book_contacts_subtitle">Чтобы найти здесь знакомых</string>
    <string name="banner_middle_permit_phone_book_contacts_title">Подключите\nконтакты</string>
    <string name="banner_permit_notifications_subtitle">Чтобы не пропустить важное</string>
    <string name="bot">бот</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="button_title_send_location_by_request">Отправить место</string>
    <string name="call_admin_settings_disable_all_cameras_once">Отключить все камеры</string>
    <string name="call_admin_settings_disable_all_hands_once">Опустить всем руки</string>
    <string name="call_admin_settings_disable_all_mic_once">Отключить все микрофоны</string>
    <string name="call_admins_settings_camera_disabled_in_call">Вы запретили включать камеры</string>
    <string name="call_admins_settings_camera_failed_in_call">Не удалось изменить настройки камеры</string>
    <string name="call_admins_settings_camera_in_call">Включать камеру</string>
    <string name="call_admins_settings_mic_failed_in_call">Не удалось изменить настройки микрофона</string>
    <string name="call_admins_settings_mic_in_call">Включать микрофон</string>
    <string name="call_admins_settings_min_disabled_in_call">Вы запретили включать микрофоны</string>
    <string name="call_admins_settings_screen_connection_header">Подключение к звонку</string>
    <string name="call_admins_settings_screen_disable_camera_for_user">Вы отключили камеру участнику</string>
    <string name="call_admins_settings_screen_disable_camera_once">Вы отключили камеры – участники могут их включить</string>
    <string name="call_admins_settings_screen_disable_mic_for_user">Вы отключили микрофон участнику</string>
    <string name="call_admins_settings_screen_disable_mic_once">Вы отключили микрофоны – участники могут их включить</string>
    <string name="call_admins_settings_screen_disable_race_for_user">Вы опустили руку участнику</string>
    <string name="call_admins_settings_screen_disable_race_once">Вы опустили всем руки</string>
    <string name="call_admins_settings_screen_disable_record">Администратор остановил запись экрана</string>
    <string name="call_admins_settings_screen_disable_sharing_for_user">Вы остановили показ экрана</string>
    <string name="call_admins_settings_screen_failed_enabled_in_call">Не удалось изменить показа экрана</string>
    <string name="call_admins_settings_screen_media_header">Участники звонка могут</string>
    <string name="call_admins_settings_screen_media_header_bottom">Настройки действуют на всех, кроме администратора</string>
    <string name="call_admins_settings_screen_record_disabled_in_call">Вы запретили запись звонка</string>
    <string name="call_admins_settings_screen_record_in_call">Записывать звонок</string>
    <string name="call_admins_settings_screen_sharing_disabled_in_call">Вы запретили показ экрана</string>
    <string name="call_admins_settings_screen_sharing_in_call">Показывать экран</string>
    <string name="call_admins_settings_title">Настройки звонка</string>
    <string name="call_admins_settings_waiting_room">Зал ожидания</string>
    <string name="call_admins_settings_waiting_room_desc">Подключение только после вашего разрешения</string>
    <string name="call_ask_permission_audio_video_denied_description">Выберите MAX в настройках и включите доступ к камере и микрофону</string>
    <string name="call_ask_permission_audio_video_denied_title">Разрешите доступ к камере и микрофону в настройках</string>
    <string name="call_ask_permission_denied_description">Выберите Max в настройках и включите доступ к микрофону</string>
    <string name="call_ask_permission_denied_title">Разрешите доступ к микрофону в настройках</string>
    <string name="call_ask_permission_description">Вы сможете звонить и записывать аудиосообщения</string>
    <string name="call_cancel">Закрыть</string>
    <string name="call_cancel_accessibility">Завершить звонок</string>
    <string name="call_change_mode_text_hint">Потяните вниз, чтобы открыть \nговорящего на весь экран</string>
    <string name="call_close_dialog_accessibility">Закрыть</string>
    <string name="call_collapsing_accessibility">Свернуть звонок</string>
    <string name="call_connecting">Подключение…</string>
    <string name="call_context_action_chat">Чат звонка</string>
    <string name="call_context_dialog_debug_menu">Debug menu</string>
    <string name="call_context_dialog_invite_user_to_p2p">Пригласить в звонок</string>
    <string name="call_context_dialog_open_chat">Написать в чат</string>
    <string name="call_context_dialog_open_profile">Открыть профиль</string>
    <string name="call_context_dialog_record_screen">Запись звонка</string>
    <string name="call_context_dialog_record_screen_in_progress">Запись уже идёт</string>
    <string name="call_context_dialog_record_screen_unavailable_desc">Администратор запретил запись экрана</string>
    <string name="call_context_dialog_settings">Настройки</string>
    <string name="call_context_dialog_share_screen">Показать экран</string>
    <string name="call_context_dialog_share_screen_unavailable_desc">Администратор запретил показ экрана</string>
    <string name="call_context_dialog_share_sound">Транслировать звук</string>
    <string name="call_context_dialog_stop_record_screen">Остановить запись</string>
    <string name="cancel">Отменить</string>
    <string name="chat_message_search_result">%1$d из %2$d</string>
    <string name="chat_message_search_result_next">Следующий результат поиска</string>
    <string name="chat_message_search_result_prev">Предыдущий результат поиска</string>
    <string name="live_location_choose_time">Выбрать время трансляции</string>
    <string name="scheduled_message_set_correct_time">Укажите корректное время</string>
    <string name="scheduled_send_messages_send_button_title">Отправить</string>
    <string name="scheduled_send_messages_send_with_notification">Отправить с уведомлением</string>
    <string name="scheduled_send_messages_title">Когда отправить</string>
    <string name="send_live_location">Начать трансляцию</string>
</resources>