<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MaterialComponents"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="6dp">
    <androidx.constraintlayout.widget.Group
        android:id="@+id/layout_send_location__live_group"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="         layout_send_location__tv_pick_duration,         layout_send_location__cancel_button         "/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/font_small"
        android:typeface="normal"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/layout_send_location__tv_pick_duration"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/live_location_choose_time"
        android:maxLines="1"
        android:singleLine="true"
        android:includeFontPadding="false"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/layout_send_location__cancel_button"
        android:background="@null"
        android:padding="4dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_cross_16"
        android:scaleType="fitCenter"
        android:contentDescription="@string/cancel"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <one.me.sdk.uikit.common.button.OneMeTitleSubtitleButton
        android:id="@+id/layout_send_location__send_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/send_live_location"
        android:layout_marginStart="@dimen/spacing_size_xl"
        android:layout_marginEnd="@dimen/spacing_size_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
