<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="16sp"
        android:id="@+id/chat_msg_search_result_view__result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/chat_message_search_result"
        android:maxLines="1"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/chat_msg_search_result_view__space"
        app:layout_constraintTop_toTopOf="parent"/>
    <Space
        android:id="@+id/chat_msg_search_result_view__space"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/chat_msg_search_result_view__result"
        app:layout_constraintRight_toLeftOf="@+id/chat_msg_search_result_view__next"
        app:layout_constraintTop_toTopOf="parent"/>
    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/chat_msg_search_result_view__pb_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/chat_msg_search_result_view__next"
        android:padding="6dp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginRight="24dp"
        android:src="@drawable/ic_arrow_up_24"
        android:contentDescription="@string/chat_message_search_result_next"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/chat_msg_search_result_view__space"
        app:layout_constraintRight_toLeftOf="@+id/chat_msg_search_result_view__prev"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:id="@+id/chat_msg_search_result_view_next_prev_separator"
        android:layout_width="0.5dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chat_msg_search_result_view__prev"
        app:layout_constraintStart_toEndOf="@+id/chat_msg_search_result_view__next"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/chat_msg_search_result_view__prev"
        android:padding="6dp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/ic_arrow_down_24"
        android:contentDescription="@string/chat_message_search_result_prev"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/chat_msg_search_result_view__next"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</merge>
